# Docintel

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-scaffold-foundation/: 01-01-SUMMARY.md  01-02-SUMMARY.md
.planning/phases/03-corpus-ingestion/: 03-01-SUMMARY.md
.planning/phases/04-embedding-indexing/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-SUMMARY.md  04-04-SUMMARY.md  04-05-SUMMARY.md  04-06-SUMMARY.md  04-07-SUMMARY.md
.planning/phases/05-retrieval-hybrid-rerank/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-07-PLAN.md  05-07-SUMMARY.md  05-CONTEXT.md  05-VERIFICATION.md
.planning/phases/06-generation/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-05-PLAN.md  06-05-SUMMARY.md  06-06-PLAN.md  06-07-PLAN.md  06-07-SUMMARY.md  06-CONTEXT.md  06-DECISIONS-AUDIT.md  06-DISCUSSION-LOG.md  06-PATTERNS.md  06-RESEARCH.md  06-VALIDATION.md
.planning/phases/14-empirical-closure/: .continue-here.md  14-01-SUMMARY.md  14-02-SUMMARY.md  14-03-SUMMARY.md  14-04-SUMMARY.md  14-05-SUMMARY.md
data/corpus/: .accession-map.json  MANIFEST.json  companies.snapshot.csv
data/corpus/chunks/AAPL/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/chunks/GOOGL/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/chunks/HD/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/chunks/JNJ/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/chunks/JPM/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/chunks/LLY/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/chunks/MSFT/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/chunks/NVDA/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/chunks/PG/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/chunks/TSLA/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/chunks/V/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/chunks/WMT/: FY2023.jsonl  FY2024.jsonl  FY2025.jsonl
data/corpus/normalized/AAPL/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/AMZN/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/GOOGL/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/HD/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/JNJ/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/JPM/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/LLY/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/META/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/MSFT/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/NVDA/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/PG/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/TSLA/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/V/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/WMT/: FY2023.json  FY2024.json  FY2025.json
data/corpus/normalized/XOM/: FY2023.json  FY2024.json  FY2025.json
data/corpus/raw/AAPL/: FY2023.html  FY2024.html  (+1 more)
data/eval/: baseline.json  traces-seed.jsonl
data/eval/brief_ground_truth/: brief_set.jsonl
data/eval/canary/: cases.jsonl
data/eval/ground_truth/: questions.jsonl
docker/: .dockerignore  Dockerfile  entrypoint-api.sh
docs/: HERO-STORYBOARD.md  REAL-RUN-CHECKLIST.md
scripts/: check_adapter_wraps.sh  check_before_sleep_safe.sh  check_index_wraps.sh  check_ingest_wraps.sh  check_no_print.sh  check_prompt_locality.sh  measure_tokenizer_drift.py  nim_probe.py  readme_paste.py
tests/: conftest.py  test_10q_pipeline_e2e.py  test_ablation.py  test_adapters.py  test_answer_schema.py  test_api_brief.py  test_api_coverage.py  test_api_query.py  test_api_ready.py  test_api_static.py  test_api_traces.py  test_api_trust.py  test_baseline_cost_matches.py  test_baseline_schema.py  test_before_sleep_redacts_api_keys.py  test_bm25_store.py  test_brief_eval.py  test_calibration.py  test_check_before_sleep_safe.py  test_chunk.py  test_chunk_id_10q.py  test_chunk_id_8k.py  test_chunk_idempotency.py  test_ci_gates.py  test_citation_schema.py  test_confidence_emit.py  test_config.py  test_corpus_layout.py  test_coverage.py  test_coverage_scope_enforced.py  test_coverage_view.py  test_design_tokens.py  test_detect.py  test_docs_gates.py  test_eval_cli_placeholder.py  test_eval_dataset_schema.py  test_eval_determinism.py  test_eval_harness.py  test_eval_set_frozen.py  test_eval_traces.py  (+62 more)
tests/fixtures/: leaked_key.example  unwrapped_edgar_call.py.example  unwrapped_sdk_call.py.example
tests/fixtures/before_sleep_violations/: _unsafe_example.py
tests/fixtures/before_sleep_violations_with_safe/: safe_example.py
tests/fixtures/missing_tenacity/: qdrant_fake.py
tests/fixtures/no_print_violations/: offender.py
tests/fixtures/no_print_violations_with_noqa/: allowed.py
tests/fixtures/prompt_locality_violations/: offender.py
tests/fixtures/prompt_locality_violations_with_noqa/: allowed.py
tests/fixtures/sample_10k/: aapl_FY2024_chunks.jsonl  aapl_FY2024_normalized.json  aapl_FY2024_trimmed.html
tests/fixtures/sample_10q/: msft_Q3FY2024_chunks.jsonl  msft_Q3FY2024_normalized.json  msft_Q3FY2024_trimmed.html
tests/fixtures/sample_8k/: aapl_0000320193-24-000075_chunks.jsonl  aapl_0000320193-24-000075_normalized.json  aapl_0000320193-24-000075_trimmed.html
tests/fixtures/sample_transcript/: aapl_CALL-Q1FY2024_chunks.jsonl  aapl_CALL-Q1FY2024_normalized.json  aapl_Q1FY2024.json
tests/frontend/: lib.test.mjs
web/: app.css  app.js  brief.js  index.html  lib.js  panel.js  tokens.css  trust.js
(+54 files in other folders)
