[project]
name = "docintel-workspace"
version = "0.1.0"
description = "docintel — RAG over SEC 10-K filings (uv workspace root, no runtime code)"
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
docintel-core = { workspace = true }
docintel-api  = { workspace = true }
docintel-ui   = { workspace = true }
docintel-eval = { workspace = true }

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.12",
    "black>=25.0.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
files = ["packages/*/src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "packages/*/tests"]
addopts = "-ra --strict-markers"
