[project]
name = "docintel-workspace"
version = "0.1.0"
description = "docintel — RAG over SEC 10-K filings (uv workspace root, no runtime code)"
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
members = ["packages/*"]

# PyTorch CPU-only index for Linux x86_64 / aarch64 wheels.
# Without this uv resolves the default GPU torch wheel which pulls in
# nvidia-cudnn / nvidia-cublas / nvidia-cusparse etc. and blows the
# Docker image past the 3 GiB CONTEXT.md D-08 cap. macOS (arm64) is
# unaffected — there are no CUDA wheels for darwin.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
docintel-core = { workspace = true }
docintel-api  = { workspace = true }
docintel-ui   = { workspace = true }
docintel-eval = { workspace = true }
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.12",
    "black>=25.0.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
files = ["packages/*/src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "packages/*/tests"]
addopts = "-ra --strict-markers"
