[project]
name = "docintel-workspace"
version = "0.1.0"
description = "docintel — RAG over SEC 10-K filings (uv workspace root, no runtime code)"
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
members = ["packages/*"]

# PyTorch CPU-only index for Linux x86_64 / aarch64 wheels.
# Without this uv resolves the default GPU torch wheel which pulls in
# nvidia-cudnn / nvidia-cublas / nvidia-cusparse etc. and blows the
# Docker image past the 3 GiB CONTEXT.md D-08 cap. macOS (arm64) is
# unaffected — there are no CUDA wheels for darwin.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
docintel-core     = { workspace = true }
docintel-api      = { workspace = true }
docintel-ui       = { workspace = true }
docintel-eval     = { workspace = true }
docintel-index    = { workspace = true }
docintel-retrieve = { workspace = true }
docintel-ingest   = { workspace = true }
docintel-generate = { workspace = true }
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.12",
    "black>=25.0.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
# D-19: ignore_missing_imports removed; per-module overrides cover torch/sentence_transformers/transformers.
# Phase 1 D-12 escape hatch closed — anthropic + openai SDKs ship inline type stubs (0.101.0 / 2.36.0).
warn_unused_ignores = false
files = ["packages/*/src"]

[[tool.mypy.overrides]]
# sentence_transformers, transformers, and torch lack inline type stubs.
# All three are heavyweight ML libraries with incomplete or absent py.typed markers.
# selectolax (Lexbor backend, Cython extension) ships no stubs. sec_edgar_downloader
# 5.1.0 has no py.typed marker. Per-module ignore_missing_imports is the canonical
# mypy knob (D-19; extended in Plan 03-04 for the Phase 3 ingest stack).
# bm25s (Plan 04-04 D-07) + PyStemmer (Plan 04-04 D-08 — imports as ``Stemmer``)
# also lack py.typed markers; same override pattern.
# scipy (Plan 09-02) ships no bundled py.typed stubs; scipy-stubs is a separate package
# not required by the project. numpy has inline stubs (numpy.pyi) so no override needed.
# pandas (Plan 13-04) ships no bundled py.typed marker (pandas-stubs is a separate
# package; consumed only by the Streamlit Traces tab Altair chart waterfall, so the
# canonical missing-stubs override matches the existing pattern).
module = [
    "sentence_transformers",
    "sentence_transformers.*",
    "transformers",
    "transformers.*",
    "torch",
    "torch.*",
    "selectolax",
    "selectolax.*",
    "sec_edgar_downloader",
    "sec_edgar_downloader.*",
    "bm25s",
    "bm25s.*",
    "Stemmer",
    "scipy",
    "scipy.*",
    "pandas",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "packages/*/tests"]
addopts = "-ra --strict-markers"
markers = ["real: tests that require real (non-stub) backends — gated behind workflow_dispatch"]
